--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build-lib-dev": "ng build documentor --configuration development",
     "build-lib-prod": "ng build documentor --configuration production",
     "build-app-prod": "ng build demo --configuration production",
     "build-prod": "npm run build-lib-prod && npm run build-app-prod",
-    "publish-lib": "npm publish dist/libraries/@jamesbenrobb/documentor"
+    "publish-lib": "npm run build-lib-prod && npm publish dist/libraries/@jamesbenrobb/documentor"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +26,7 @@
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
     "@jamesbenrobb/core": "^1.0.5",
-    "@jamesbenrobb/dynamic-route-app": "^0.0.8",
+    "@jamesbenrobb/dynamic-route-app": "^0.0.13",
     "@jamesbenrobb/ng": "^1.0.6",
     "@jamesbenrobb/styles": "^1.0.5",
     "@jamesbenrobb/types": "^1.0.2",
