--- a/projects/demo/src/assets/json/routes-config.json
+++ b/projects/demo/src/assets/json/routes-config.json
@@ -18,7 +18,7 @@
                   "label": "google analytics",
                   "content": {
                     "type": "",
-                    "githubLink": "assets/docs/core/src/lib/analytics/trackers/google-analytics",
+                    "githubLink": "core/src/lib/analytics/trackers/google-analytics",
                     "isModule": true,
                     "description": "assets/docs/core/src/lib/analytics/trackers/google-analytics/README.md"
                   }
@@ -29,7 +29,7 @@
           "label": "analytics",
           "content": {
             "type": "",
-            "githubLink": "assets/docs/core/src/lib/analytics",
+            "githubLink": "core/src/lib/analytics",
             "isModule": true,
             "demonstrates": "assets/docs/core/src/lib/analytics/.README/DEMONSTRATES.md",
             "description": "assets/docs/core/src/lib/analytics/.README/DESCRIPTION.md",
@@ -40,7 +40,7 @@
                 "name": "analytics-service",
                 "content": {
                   "type": "service",
-                  "githubLink": "assets/docs/core/src/lib/analytics/analytics-service.ts",
+                  "githubLink": "core/src/lib/analytics/analytics-service.ts",
                   "isModule": false,
                   "info": [
                     {
@@ -82,7 +82,7 @@
               "label": "command",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/core/src/lib/commands/command",
+                "githubLink": "core/src/lib/commands/command",
                 "isModule": true,
                 "description": "assets/docs/core/src/lib/commands/command/.README/DESCRIPTION.md",
                 "usage": {
@@ -97,7 +97,7 @@
               "label": "group",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/core/src/lib/commands/group",
+                "githubLink": "core/src/lib/commands/group",
                 "isModule": true,
                 "description": "assets/docs/core/src/lib/commands/group/.README/DESCRIPTION.md",
                 "usage": {
@@ -115,7 +115,7 @@
               "label": "processor",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/core/src/lib/commands/processor",
+                "githubLink": "core/src/lib/commands/processor",
                 "isModule": true,
                 "description": "assets/docs/core/src/lib/commands/processor/.README/DESCRIPTION.md",
                 "usage": {
@@ -133,7 +133,7 @@
           "label": "commands",
           "content": {
             "type": "",
-            "githubLink": "assets/docs/core/src/lib/commands",
+            "githubLink": "core/src/lib/commands",
             "isModule": true,
             "demonstrates": "assets/docs/core/src/lib/commands/.README/DEMONSTRATES.md",
             "description": "assets/docs/core/src/lib/commands/.README/DESCRIPTION.md"
@@ -144,7 +144,7 @@
           "label": "http",
           "content": {
             "type": "",
-            "githubLink": "assets/docs/core/src/lib/http",
+            "githubLink": "core/src/lib/http",
             "isModule": true,
             "demonstrates": "assets/docs/core/src/lib/http/.README/DEMONSTRATES.md",
             "description": "assets/docs/core/src/lib/http/.README/DESCRIPTION.md",
@@ -163,7 +163,7 @@
       "label": "core",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/core",
+        "githubLink": "core",
         "isModule": true,
         "description": "assets/docs/core/README.md"
       }
@@ -185,7 +185,7 @@
                       "label": "google analytics",
                       "content": {
                         "type": "",
-                        "githubLink": "assets/docs/ng/src/lib/core/analytics/trackers/google-analytics",
+                        "githubLink": "ng/src/lib/core/analytics/trackers/google-analytics",
                         "isModule": true,
                         "description": "assets/docs/ng/src/lib/core/analytics/trackers/google-analytics/README.md"
                       }
@@ -196,7 +196,7 @@
               "label": "analytics",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/ng/src/lib/core/analytics",
+                "githubLink": "ng/src/lib/core/analytics",
                 "isModule": true,
                 "description": "assets/docs/ng/src/lib/core/analytics/.README/DESCRIPTION.md",
                 "usage": {
@@ -213,7 +213,7 @@
               "label": "http",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/ng/src/lib/core/http",
+                "githubLink": "ng/src/lib/core/http",
                 "isModule": true,
                 "description": "assets/docs/ng/src/lib/core/http/README.md"
               }
@@ -224,7 +224,7 @@
       "label": "ng",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/ng",
+        "githubLink": "ng",
         "isModule": true,
         "description": "assets/docs/ng/README.md"
       }
@@ -237,7 +237,7 @@
           "label": "flex grid",
           "content": {
             "type": "mixin",
-            "githubLink": "assets/docs/styles/flex/flex-grid.mixin.ts",
+            "githubLink": "styles/flex/flex-grid.mixin.ts",
             "isModule": false,
             "info": [
               {
@@ -264,7 +264,7 @@
       "label": "styles",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/styles",
+        "githubLink": "styles",
         "isModule": true,
         "description": "assets/docs/styles/README.md"
       }
@@ -280,7 +280,7 @@
               "label": "parser",
               "content": {
                 "type": "",
-                "githubLink": "assets/docs/ts/src/lib/ast/parser",
+                "githubLink": "ts/src/lib/ast/parser",
                 "isModule": true,
                 "description": "assets/docs/ts/src/lib/ast/parser/.README/DESCRIPTION.md",
                 "usage": {
@@ -299,7 +299,7 @@
       "label": "ts",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/ts",
+        "githubLink": "ts",
         "isModule": true,
         "description": "assets/docs/ts/README.md"
       }
@@ -309,7 +309,7 @@
       "label": "types",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/types",
+        "githubLink": "types",
         "isModule": true,
         "description": "assets/docs/types/README.md"
       }
@@ -322,7 +322,7 @@
           "label": "component loader",
           "content": {
             "type": "",
-            "githubLink": "assets/docs/ui/src/lib/component-loader",
+            "githubLink": "ui/src/lib/component-loader",
             "isModule": true,
             "description": "assets/docs/ui/src/lib/component-loader/.README/DESCRIPTION.md",
             "sections": [
@@ -332,7 +332,7 @@
                 "name": "component-loader-io-base.abstract",
                 "content": {
                   "type": "abstract",
-                  "githubLink": "assets/docs/ui/src/lib/component-loader/component-loader-io-base.abstract.ts",
+                  "githubLink": "ui/src/lib/component-loader/component-loader-io-base.abstract.ts",
                   "isModule": false,
                   "info": [
                     {
@@ -353,7 +353,7 @@
                 "name": "component-loader-io.directive",
                 "content": {
                   "type": "directive",
-                  "githubLink": "assets/docs/ui/src/lib/component-loader/component-loader-io.directive.ts",
+                  "githubLink": "ui/src/lib/component-loader/component-loader-io.directive.ts",
                   "isModule": false,
                   "info": [
                     {
@@ -382,7 +382,7 @@
                 "name": "component-loader.directive",
                 "content": {
                   "type": "directive",
-                  "githubLink": "assets/docs/ui/src/lib/component-loader/component-loader.directive.ts",
+                  "githubLink": "ui/src/lib/component-loader/component-loader.directive.ts",
                   "isModule": false,
                   "info": [
                     {
@@ -424,7 +424,7 @@
                 "name": "component-loader.service",
                 "content": {
                   "type": "service",
-                  "githubLink": "assets/docs/ui/src/lib/component-loader/component-loader.service.ts",
+                  "githubLink": "ui/src/lib/component-loader/component-loader.service.ts",
                   "isModule": false,
                   "info": [
                     {
@@ -458,7 +458,7 @@
               "label": "markdown",
               "content": {
                 "type": "component",
-                "githubLink": "assets/docs/ui/src/lib/content/markdown/markdown.component.ts",
+                "githubLink": "ui/src/lib/content/markdown/markdown.component.ts",
                 "isModule": false,
                 "description": "assets/docs/ui/src/lib/content/markdown/.README/markdown.component/DESCRIPTION.md",
                 "usage": {
@@ -480,7 +480,7 @@
               "label": "grid layout",
               "content": {
                 "type": "component",
-                "githubLink": "assets/docs/ui/src/lib/layout/grid/grid-layout.component.ts",
+                "githubLink": "ui/src/lib/layout/grid/grid-layout.component.ts",
                 "isModule": false,
                 "info": [
                   {
@@ -537,7 +537,7 @@
               "label": "responsive container",
               "content": {
                 "type": "directive",
-                "githubLink": "assets/docs/ui/src/lib/responsive/container/responsive-container.directive.ts",
+                "githubLink": "ui/src/lib/responsive/container/responsive-container.directive.ts",
                 "isModule": false,
                 "description": "assets/docs/ui/src/lib/responsive/container/.README/responsive-container.directive/DESCRIPTION.md",
                 "info": [
@@ -566,7 +566,7 @@
       "label": "ui",
       "content": {
         "type": "",
-        "githubLink": "assets/docs/ui",
+        "githubLink": "ui",
         "isModule": true,
         "description": "assets/docs/ui/README.md"
       }
