--- a/libraries/documentor/package.json
+++ b/libraries/documentor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jamesbenrobb/documentor",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "author": "James Robb",
   "description": "Angular application for documentation",
   "repository": {
@@ -18,12 +18,13 @@
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
-    "@jamesbenrobb/dynamic-route-app": "^0.0.22",
+    "@jamesbenrobb/dynamic-route-app": "^0.0.23",
     "@jamesbenrobb/styles": "^1.0.9",
     "@jamesbenrobb/types": "^1.0.3",
-    "@jamesbenrobb/ui": "^1.0.23",
+    "@jamesbenrobb/ui": "^1.0.29",
     "@jongwooo/prism-theme-github": "1.14.0",
     "github-markdown-css": "5.5.1",
+    "codemirror": "5.65.16",
     "normalize.css": "^8.0.1"
   },
   "dependencies": {
