--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
-    "@jamesbenrobb/core": "^1.0.5",
-    "@jamesbenrobb/dynamic-route-app": "^0.0.23",
+    "@jamesbenrobb/core": "^1.0.6",
+    "@jamesbenrobb/dynamic-route-app": "^0.0.26",
+    "@jamesbenrobb/styles": "^1.0.10",
+    "@jamesbenrobb/ui": "^1.0.36",
     "@jongwooo/prism-theme-github": "1.14.0",
     "github-markdown-css": "5.5.1",
     "normalize.css": "^8.0.1",
