--- a/libraries/documentor/package.json
+++ b/libraries/documentor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jamesbenrobb/documentor",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "author": "James Robb",
   "description": "Angular application for documentation",
   "repository": {
@@ -18,10 +18,14 @@
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
-    "@jamesbenrobb/dynamic-route-app": "^0.0.27",
-    "@jamesbenrobb/styles": "^1.0.10",
+    "@jamesbenrobb/dynamic-routes": "^0.0.27",
+    "@jamesbenrobb/app-shell": "^0.0.8",
+    "@jamesbenrobb/app-shell-routing-adaptors": "^0.0.8",
+    "@jamesbenrobb/dynamic-routes": "^0.0.4",
+    "@jamesbenrobb/dynamic-routes-ngx": "^0.0.4",
     "@jamesbenrobb/types": "^1.0.3",
-    "@jamesbenrobb/ui": "^1.0.36",
+    "@jamesbenrobb/styles": "^1.0.10",
+    "@jamesbenrobb/ui": "^1.0.40",
     "@jongwooo/prism-theme-github": "1.14.0",
     "github-markdown-css": "5.5.1",
     "codemirror": "5.65.16",
