--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.1",
-    "@angular/cdk": "^17.2.0",
-    "@angular/common": "^17.2.1",
-    "@angular/compiler": "^17.2.1",
-    "@angular/core": "^17.2.1",
-    "@angular/forms": "^17.2.1",
-    "@angular/material": "^17.2.0",
-    "@angular/platform-browser": "^17.2.1",
-    "@angular/platform-browser-dynamic": "^17.2.1",
-    "@angular/router": "^17.2.1",
+    "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/router": "^17.3.0",
     "@jamesbenrobb/core": "^1.0.6",
-    "@jamesbenrobb/dynamic-route-app": "^0.0.27",
+    "@jamesbenrobb/app-shell": "^0.0.8",
+    "@jamesbenrobb/app-shell-routing-adaptors": "^0.0.8",
+    "@jamesbenrobb/dynamic-routes": "^0.0.4",
+    "@jamesbenrobb/dynamic-routes-ngx": "^0.0.4",
     "@jamesbenrobb/styles": "^1.0.10",
-    "@jamesbenrobb/ui": "^1.0.37",
+    "@jamesbenrobb/ui": "^1.0.40",
     "@jongwooo/prism-theme-github": "1.14.0",
     "github-markdown-css": "5.5.1",
     "normalize.css": "^8.0.1",
@@ -37,9 +40,9 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular/cli": "^17.2.0",
-    "@angular/compiler-cli": "^17.2.1",
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular/cli": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/prismjs": "^1.26.3",
     "jasmine-core": "~5.1.0",
@@ -48,7 +51,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^17.1.2",
+    "ng-packagr": "^17.3.0",
     "typescript": "~5.3.2"
   }
 }
