updated to latest version of app shell

--- a/projects/demo/src/assets/json/app-config.json
+++ b/projects/demo/src/assets/json/app-config.json
@@ -61,6 +61,6 @@
   },
   "github-config": {
       "root": "https://github.com/jamesbrobb/jbr/",
-      "app": "tree/main/"
+      "app": "tree/main/libraries/"
   }
 }
