--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@jamesbenrobb/app-shell": "^0.0.12",
+    "@jamesbenrobb/app-shell-routing-adaptors": "^0.0.12",
     "@jamesbenrobb/core": "^1.0.6",
-    "@jamesbenrobb/app-shell": "^0.0.9",
-    "@jamesbenrobb/app-shell-routing-adaptors": "^0.0.8",
-    "@jamesbenrobb/dynamic-routes": "^0.0.4",
-    "@jamesbenrobb/dynamic-routes-ngx": "^0.0.4",
-    "@jamesbenrobb/styles": "^1.0.10",
+    "@jamesbenrobb/dynamic-routes": "^0.0.8",
+    "@jamesbenrobb/dynamic-routes-ngx": "^0.0.8",
+    "@jamesbenrobb/styles": "^1.0.11",
     "@jamesbenrobb/ui": "^1.0.41",
     "@jongwooo/prism-theme-github": "1.14.0",
     "github-markdown-css": "5.5.1",
@@ -52,6 +52,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.3.0",
-    "typescript": "~5.3.2"
+    "typescript": "^5.4.3"
   }
 }
